# Saphetor

./: .gitignore  CMakeLists.txt  FileProcessor.sln  README.md  Saphetor.sln  Saphetor.vcxproj  Saphetor.vcxproj.filters
Common/: Common.vcxproj  Common.vcxproj.filters  CommonExport.h  Configuration.cpp  Configuration.h  ErrorHandler.h  Logging.h  ThreadPool.cpp  ThreadPool.h  VCFData.cpp  VCFData.h
DataAccessLayer/: DALExport.h  DataAccessLayer.vcxproj  DataAccessLayer.vcxproj.filters  IVCFDal.h  SQLiteConnectionPool.cpp  SQLiteConnectionPool.h  SQLiteQuery.cpp  SQLiteQuery.h  SQLiteSelect.cpp  SQLiteSelect.h  SQLiteStmt.cpp  SQLiteStmt.h  SQLiteVCFDal.cpp  SQLiteVCFDal.h  VCFSQLiteRecord.cpp  VCFSQLiteRecord.h
apps/: main.cpp
include/: Configuration.h  ErrorHandler.h  IFileReader.h  IParser.h  ThreadPool.h  VCFConstants.h  VCFLineParser.h  VCFProcessor.h  VCFReader.h  Validators.h
src/: Configuration.cpp  ErrorHandler.cpp  VCFLineParser.cpp  VCFProcessor.cpp  VCFReader.cpp  Validators.cpp
tests/: Utils.cpp  Utils.h  assignment.sample.vcf  packages.config  testVCFLineParser.cpp  testVCFProcessor.cpp  testVCFReader.cpp  testVCFSQLite.cpp  testValidators.cpp  tests.vcxproj
